--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-      <div class="chatbot-container" style="height: 100%"></div><script>var HeymaryConfig={appId:"47b76183-af1d-487a-9c4a-4106bed0c42e",mode:"inline"};!function(e,t){var a=function(){(a.q=a.q||[]).push(arguments)};a.q=a.q||[],e.HeyMaryApi=a,function(){var e=t.createElement("script"),a=t.createElement("link"),n=t.createElement("chat-heymary");n.setAttribute("app-id",HeymaryConfig.appId),n.setAttribute("mode",HeymaryConfig.mode),a.href="https://dev.hellomary.tech/static/css/heymary-widget.css",a.rel="stylesheet",e.type="text/javascript",e.async=1,e.src="https://dev.hellomary.tech/static/js/heymary-widget.js";var s=t.getElementsByClassName("chatbot-container")[0],r=t.getElementsByTagName("script")[0],i=t.getElementsByTagName("head")[0];s.appendChild(n),i.appendChild(a),r.parentNode.insertBefore(e,r)}()}(window,document); </script>
 <!-- basic -->
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -339,5 +338,7 @@
 <!-- sidebar --> 
 <script src="js/jquery.mCustomScrollbar.concat.min.js"></script> 
 <script src="js/custom.js"></script>
+      
+      <script>var HeymaryConfig={appId:"47b76183-af1d-487a-9c4a-4106bed0c42e",mode:"livechat"};!function(t,a){var e=function(){(e.q=e.q||[]).push(arguments)};e.q=e.q||[],t.HeyMaryApi=e;!function(){var t=a.createElement("script");var c=a.createElement("link");var k=a.createElement("chat-heymary");k.setAttribute('app-id',HeymaryConfig.appId),k.setAttribute('mode',HeymaryConfig.mode);c.href="https://dev.hellomary.tech/static/css/heymary-widget.css",c.rel="stylesheet";t.type="text/javascript",t.async=1,t.src="https://dev.hellomary.tech/static/js/heymary-widget.js";var b=a.getElementsByTagName("body")[0];var e=a.getElementsByTagName("script")[0];var h=a.getElementsByTagName("head")[0];b.appendChild(k);h.appendChild(c);e.parentNode.insertBefore(t,e)}();}(window,document)</script>
       
 </html>
