--- a/index.html
+++ b/index.html
@@ -338,6 +338,6 @@
 <!-- sidebar --> 
 <script src="js/jquery.mCustomScrollbar.concat.min.js"></script> 
 <script src="js/custom.js"></script>
-      
-<script>var HeymaryConfig={appId:"63961ef8-9514-42bb-913e-f03af666dd5e",mode:"livechat"};!function(t,a){var e=function(){(e.q=e.q||[]).push(arguments)};e.q=e.q||[],t.HeyMaryApi=e;!function(){var t=a.createElement("script");var c=a.createElement("link");var k=a.createElement("chat-heymary");k.setAttribute('app-id',HeymaryConfig.appId),k.setAttribute('mode',HeymaryConfig.mode);c.href="https://pre-prod.hellomary.tech/static/css/heymary-widget.css",c.rel="stylesheet";t.type="text/javascript",t.async=1,t.src="https://pre-prod.hellomary.tech/static/js/heymary-widget.js";var b=a.getElementsByTagName("body")[0];var e=a.getElementsByTagName("script")[0];var h=a.getElementsByTagName("head")[0];b.appendChild(k);h.appendChild(c);e.parentNode.insertBefore(t,e)}();}(window,document)</script>      
+    
+<script>var HeymaryConfig={appId:"47b76183-af1d-487a-9c4a-4106bed0c42e",mode:"livechat"};!function(t,a){var e=function(){(e.q=e.q||[]).push(arguments)};e.q=e.q||[],t.HeyMaryApi=e;!function(){var t=a.createElement("script");var c=a.createElement("link");var k=a.createElement("chat-heymary");k.setAttribute('app-id',HeymaryConfig.appId),k.setAttribute('mode',HeymaryConfig.mode);c.href="https://dev.hellomary.tech/static/css/heymary-widget.css",c.rel="stylesheet";t.type="text/javascript",t.async=1,t.src="https://dev.hellomary.tech/static/js/heymary-widget.js";var b=a.getElementsByTagName("body")[0];var e=a.getElementsByTagName("script")[0];var h=a.getElementsByTagName("head")[0];b.appendChild(k);h.appendChild(c);e.parentNode.insertBefore(t,e)}();}(window,document)</script>
       </html>
